wip: added pw entry, view more info still TODO, resolve swiftsheet video spacing gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,6 +273,9 @@ p,li{
 	position: relative;
 	top: -137px;
 }
+#swiftsheet video {
+	top: -180px;
+}
 #select-run video {
 	top: -150px;
 }
